syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.chizi.ticket";
option java_outer_classname = "TicketProto";

package ticket;

service Ticket {
  rpc RhinoCreateAccount (AccountRequest) returns (AccountReply) {}
  rpc RhinoLogin (LoginRequest) returns (LoginReply) {}
  rpc RhinoChangePassword (PasswordRequest) returns (LoginReply) {}
  rpc PullHare (HareRequest) returns (HareReply) {}

  rpc HareCreateAccount (AccountRequest) returns (AccountReply) {}
  rpc HareLogin (LoginRequest) returns (LoginReply) {}
  rpc HareChangePassword (PasswordRequest) returns (LoginReply) {}

  rpc RecordTicket (TicketDetails) returns (RecordReply) {}
  rpc SubmitTicketStats (TicketStats) returns (StatsReply) {}

  rpc SlaveLocSubmit(SlaveLoc) returns (MasterOrder) {}
  rpc SlaveAnchorSubmit(SlaveLoc) returns (MasterOrder) {}
  rpc MasterReceive(stream MasterOrder) returns (stream SlaveLoc) {}

  rpc PullLocation (PullLocRequest) returns (stream SlaveLoc) {}
  rpc PullPerformance (PullPerformanceRequest) returns (stream SlavePerformance) {}
  rpc PullAnchors (PullAnchorRequest) returns (SlaveAnchors) {}
  rpc PullTicketStats (PullTicketStatsRequest) returns (TicketStats) {}
  rpc PullTicket (PullTicketRequest) returns (stream TicketDetails) {}

  rpc SetTicketRange (TicketRange) returns (TicketRangeReply) {}
  rpc PullTicketRange (TicketRangeSid) returns (TicketRange) {}

}

message AccountRequest {
  string user_id = 1;
  string password = 2;
  string police_name = 3;
  string police_type = 4;
  string police_city = 5;
  string police_dept = 6;
  string police_squad = 7;
  string police_section = 8;
  bytes police_portrait = 9;
}

message AccountReply {
  bool create_success = 1;
}

message LoginRequest {
  string user_id = 1;
  string password = 2;
}

message LoginReply {
  bool login_success = 1;
  string police_name = 2;
  string police_type = 3;
  string police_city = 4;
  string police_dept = 5;
  string police_squad = 6;
  string police_section = 7;
  bytes police_portrait = 8;
}

message HareRequest {
  string sid = 1;
}

message HareReply {
  bool hare_success = 1;
  string police_name = 2;
  string police_type = 3;
  string police_city = 4;
  string police_dept = 5;
  string police_squad = 6;
  string police_section = 7;
}

message PasswordRequest {
  string user_id = 1;
  string password = 2;
  string new_password = 3;
}

message TicketDetails {
  int64 ticket_id = 1;
  string user_id = 2;
  string license_num = 3;
  string license_color = 4;
  string vehicle_type = 5;
  string vehicle_color = 6;
  int32 year = 7;
  int32 month = 8;
  int32 day = 9;
  int32 hour = 10;
  int32 minute = 11;
  string address = 12;
  double longitude = 13;
  double latitude = 14;
  bytes map_image = 15;
  bytes far_image = 16;
  bytes close_image = 17;
  bytes ticket_image = 18;
}

message RecordReply {
  bool record_success = 1;
}

message TicketStats {
  string sid = 1;
  int32 saved_ticket_count = 2;
  int32 uploaded_ticket_count = 3;
}

message StatsReply {
  bool stats_success = 1;
}

message PullLocRequest {
  string mid = 1;
}

message PullPerformanceRequest {
  string mid = 1;
}

message PullAnchorRequest {
  string sid = 1;
}

message PullTicketStatsRequest {
  string sid = 1;
}

message PullTicketRequest {
  string sid = 1;
}

message SlaveLoc {
  string sid = 1;
  double longitude = 2;
  double latitude = 3;
}

message SlavePerformance {
  string sid = 1;
  string police_name = 2;
  string police_dept = 3;
  int32 ticket_count_day = 4;
  int32 ticket_count_week = 5;
  int32 ticket_count_month = 6;
}

message MasterOrder {
  string mid = 1;
  string master_order = 2;
}

message SlaveAnchors {
  string sid = 1;
  int32 anchor_count = 2;
  double anchor0_lng = 3;
  double anchor0_lat = 4;
  double anchor1_lng = 5;
  double anchor1_lat = 6;
  double anchor2_lng = 7;
  double anchor2_lat = 8;
  double anchor3_lng = 9;
  double anchor3_lat = 10;
  double anchor4_lng = 11;
  double anchor4_lat = 12;
  double anchor5_lng = 13;
  double anchor5_lat = 14;
}

message TicketRange {
  int64 ticket_id_start = 1;
  int64 ticket_id_end = 2;
}

message TicketRangeReply {
  bool range_success = 1;
}

message TicketRangeSid {
  string sid = 1;
}

